# ascii-tui-qwen3-lab

./: .gitignore  PROGRESS.md  README.md  pyproject.toml
configs/: topics.yaml
scripts/: generate_samples.py  generate_synthetic_dataset.py  plot_loss_curve.py  run_full_experiment.sh  start_vllm_endpoint.sh  test_vllm_endpoint.py  train_qwen3_ascii_tui.py
