[project]
name = "ascii-tui-qwen3-lab"
version = "0.1.0"
description = "Synthetic-data + 4-GPU fine-tuning pipeline for Qwen3 0.6B ASCII/TUI educational diagrams."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.1.0",
  "bitsandbytes>=0.45.0",
  "datasets>=3.0.1",
  "jsonschema>=4.23.0",
  "matplotlib>=3.9.2",
  "openai>=1.54.0",
  "orjson>=3.10.10",
  "peft>=0.13.0",
  "pyyaml>=6.0.2",
  "tenacity>=9.0.0",
  "torch>=2.5.0",
  "tqdm>=4.66.5",
  "transformers>=4.46.0",
  "vllm>=0.6.0",
]

[tool.uv]
package = false

